# lillycam

./: .env.example  .gitignore  CLAUDE.md  LICENSE  NOTICE  pyproject.toml  readme.md  requirements.txt  spike_webapp.py
.claude/: settings.json
3d-models/step/: base_plate.step  cat_speaker_grille.step  dispenser_spinner.step  enclosure_body.step  enclosure_body_back.step  enclosure_body_front.step  enclosure_body_left.step  enclosure_body_right.step  jar_attachment.step  motor_mount.step  pi_case.step  pi_case_lid.step
3d-models/stl/: base_plate.stl  cat_speaker_grille.stl  dispenser_spinner.stl  enclosure_body.stl  enclosure_body_back.stl  enclosure_body_front.stl  enclosure_body_left.stl  enclosure_body_right.stl  jar_attachment.stl  motor_mount.stl  pi_case.stl  pi_case_lid.stl
config/: asound.conf  config.txt.snippet  lillycam-cert-renew.service  lillycam-cert-renew.timer  lillycam.service  pigpiod-override.conf  renew-cert.sh
docs/: assembly.md  hardware.md  pi-setup.md
examples/: test_audio_loopback.py  test_camera.py  test_camera_tilt.py  test_mic.py  test_oled.py  test_servo.py  test_speaker.py  test_stepper.py  test_stream.py
lillycam/: __init__.py  __main__.py  app.py  audio.py  camera.py  config.py  control.py  display.py  pins.py  servo.py  stepper.py
lillycam/web/: push.py  routes.py
lillycam/web/static/: app.js  manifest.webmanifest  push.js  style.css  sw.js
lillycam/web/templates/: index.html
tests/: conftest.py  test_config.py  test_control.py  test_routes.py  test_stepper_logic.py
